--- a/index.html
+++ b/index.html
@@ -379,58 +379,70 @@
       <!-- Upcoming Events -->
       <div class="events-section">
         <h3 class="events-section-title">Upcoming Events</h3>
-        <div class="conferences-grid">
+        <div class="events-slider-wrapper">
+          <button class="events-slider-btn events-slider-prev" aria-label="Previous">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="15 18 9 12 15 6"></polyline></svg>
+          </button>
+          <div class="events-slider-viewport">
+            <div class="events-slider-track">
 
-          <a href="https://affiliateworldconferences.com/dubai" target="_blank" class="conference-card">
-            <div class="conference-logo-wrapper">
-              <img src="img/aw-logo.png" alt="Affiliate World">
-            </div>
-            <div class="conference-date">4-5 Mar 2026</div>
-            <h4 class="conference-name">Affiliate World</h4>
-            <p class="conference-location">Dubai, UAE</p>
-            <span class="conference-link">affiliateworldconferences.com</span>
-          </a>
+              <a href="https://affiliateworldconferences.com/dubai" target="_blank" class="conference-card">
+                <div class="conference-logo-wrapper">
+                  <img src="img/aw-logo.png" alt="Affiliate World">
+                </div>
+                <div class="conference-date">4-5 Mar 2026</div>
+                <h4 class="conference-name">Affiliate World</h4>
+                <p class="conference-location">Dubai, UAE</p>
+                <span class="conference-link">affiliateworldconferences.com</span>
+              </a>
 
-          <a href="https://www.affiliatetakeover.com/miami" target="_blank" class="conference-card">
-            <div class="conference-logo-wrapper">
-              <img src="img/ato-logo.png" alt="Affiliate Takeover">
-            </div>
-            <div class="conference-date">18-19 Mar 2026</div>
-            <h4 class="conference-name">Affiliate Takeover</h4>
-            <p class="conference-location">Miami, US</p>
-            <span class="conference-link">affiliatetakeover.com</span>
-          </a>
-          <a href="https://www.leadscon.com/event/leadscon-las-vegas-2026/" target="_blank" class="conference-card">
-            <div class="conference-logo-wrapper">
-              <img src="img/lc-logo.png" alt="LeadsCon">
-            </div>
-            <div class="conference-date">20-24 Apr 2026</div>
-            <h4 class="conference-name">LeadsCon</h4>
-            <p class="conference-location">Las Vegas, US</p>
-            <span class="conference-link">leadscon.com</span>
-          </a>
+              <a href="https://www.affiliatetakeover.com/miami" target="_blank" class="conference-card">
+                <div class="conference-logo-wrapper">
+                  <img src="img/ato-logo.png" alt="Affiliate Takeover">
+                </div>
+                <div class="conference-date">18-19 Mar 2026</div>
+                <h4 class="conference-name">Affiliate Takeover</h4>
+                <p class="conference-location">Miami, US</p>
+                <span class="conference-link">affiliatetakeover.com</span>
+              </a>
 
-           <a href="https://affiliatesummit.com/east" target="_blank" class="conference-card">
-            <div class="conference-logo-wrapper">
-              <img src="img/ase-logo.png" alt="Affiliate Summit">
-            </div>
-            <div class="conference-date">27-28 Jul 2026</div>
-            <h4 class="conference-name">Affiliate Summit East</h4>
-            <p class="conference-location">New York, US</p>
-            <span class="conference-link">affiliatesummit.com</span>
-          </a>
+              <a href="https://www.leadscon.com/event/leadscon-las-vegas-2026/" target="_blank" class="conference-card">
+                <div class="conference-logo-wrapper">
+                  <img src="img/lc-logo.png" alt="LeadsCon">
+                </div>
+                <div class="conference-date">20-24 Apr 2026</div>
+                <h4 class="conference-name">LeadsCon</h4>
+                <p class="conference-location">Las Vegas, US</p>
+                <span class="conference-link">leadscon.com</span>
+              </a>
 
-          <!--<a href="https://affiliatesummit.com/west" target="_blank" class="conference-card">
-            <div class="conference-logo-wrapper">
-              <img src="img/asw-logo.png" alt="Affiliate Summit">
-            </div>
-            <div class="conference-date">12-14 Jan 2027</div>
-            <h4 class="conference-name">Affiliate Summit West</h4>
-            <p class="conference-location">Las Vegas, US</p>
-            <span class="conference-link">affiliatesummit.com</span>
-          </a>-->
+              <a href="https://affiliatesummit.com/east" target="_blank" class="conference-card">
+                <div class="conference-logo-wrapper">
+                  <img src="img/ase-logo.png" alt="Affiliate Summit">
+                </div>
+                <div class="conference-date">27-28 Jul 2026</div>
+                <h4 class="conference-name">Affiliate Summit East</h4>
+                <p class="conference-location">New York, US</p>
+                <span class="conference-link">affiliatesummit.com</span>
+              </a>
 
+              <!--<a href="https://affiliatesummit.com/west" target="_blank" class="conference-card">
+                <div class="conference-logo-wrapper">
+                  <img src="img/asw-logo.png" alt="Affiliate Summit">
+                </div>
+                <div class="conference-date">12-14 Jan 2027</div>
+                <h4 class="conference-name">Affiliate Summit West</h4>
+                <p class="conference-location">Las Vegas, US</p>
+                <span class="conference-link">affiliatesummit.com</span>
+              </a>-->
+
+            </div>
+          </div>
+          <button class="events-slider-btn events-slider-next" aria-label="Next">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="9 18 15 12 9 6"></polyline></svg>
+          </button>
         </div>
+        <div class="events-slider-dots"></div>
       </div>
       
       <!-- Past Events -->
